[package]
name = "advancedresearch-path_iter"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
descripton = "A cocategory enumeration library based on path semantics"
readme = "README.md"
repository = "https://github.com/advancedresearch/path_iter.git"
homepage = "https://github.com/advancedresearch/path_iter"
keywords = ["path", "iter", "iterator", "enumeration", "advancedresearch"]
license = "MIT OR Apache-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "path_iter"

[dependencies]
